# rucora

./: .gitignore  AGENTS.md  AGENT_BUILDER_OPTIMIZATION.md  AGENT_TOOL_LOOP_FIX.md  AUTO_FIX_COMPLETE.md  AUTO_FIX_PROGRESS.md  CHANGELOG.md  CODE_DOCUMENT_REVIEW_SUMMARY.md  Cargo.toml  DOCUMENTATION_OPTIMIZATION.md  FINAL_STATUS.md  IMPROVEMENTS.md  IMPROVEMENT_COMPLETE.md  LICENSE  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  QWEN.md  REFACTORING.md  REFACTORING_COMPLETE.md  RUNTIME_MIGRATION.md  SKILLS_COMPILATION_STATUS.md  SKILLS_COMPLETE.md  SKILLS_CONFIG_RENAME.md  SKILLS_ENHANCEMENT_PLAN.md  SKILLS_FINAL.md  SKILLS_FINAL_FIX.md  SKILLS_FINAL_FIXES.md  SKILLS_FINAL_REPORT.md  SKILLS_FINAL_SUMMARY.md  SKILLS_FIXES.md  SKILLS_IMPLEMENTATION_SUMMARY.md  SKILLS_REFACTOR_PROGRESS.md  SKILLS_STATUS.md  STATUS.md  TODO_FIXES.md  WARNINGS_FIXED.md  WINDOWS_PYTHON_FIX.md  clippy.toml  clippy_after_fix.txt  clippy_fix_output.txt  (+2 more)
agentkit/: Cargo.toml  README.md
agentkit-a2a/: Cargo.toml  README.md
agentkit-a2a/src/: lib.rs  protocol.rs  transport.rs
agentkit-a2a/tests/: in_process.rs
agentkit-cli/: Cargo.toml  README.md
agentkit-cli/src/: main.rs
agentkit-core/: Cargo.toml  README.md
agentkit-core/src/: error.rs  error_classifier.rs  error_classifier_trait.rs  injection_guard.rs  injection_guard_trait.rs  lib.rs
agentkit-core/tests/: contract_provider.rs  contract_tool.rs  contract_vector_store.rs
agentkit-embed/: Cargo.toml  README.md
agentkit-embed/src/: cache.rs  lib.rs  ollama.rs  openai.rs
agentkit-mcp/: Cargo.toml  README.md
agentkit-mcp/src/: lib.rs  protocol.rs  tool.rs  transport.rs
agentkit-mcp/tests/: mcp_http_integration.rs  mcp_tool.rs
agentkit-providers/: Cargo.toml  README.md
agentkit-providers/src/: anthropic.rs  azure_openai.rs  deepseek.rs  gemini.rs  helpers.rs  http_config.rs  lib.rs  moonshot.rs  ollama.rs  openai.rs  openrouter.rs  resilient.rs
agentkit-retrieval/: Cargo.toml  README.md
agentkit-retrieval/src/: chroma.rs  chroma_persistent.rs  in_memory.rs  lib.rs  memory.rs  qdrant.rs
agentkit-runtime/: Cargo.toml  README.md
agentkit-runtime/benches/: tool_policy_check.rs
agentkit-runtime/src/: default_runtime.rs  lib.rs  loader.rs  tool_execution.rs  tool_registry.rs  trace.rs  utils.rs
agentkit-runtime/tests/: basic_runtime.rs  tool_calling_agent.rs  trace_replay.rs
agentkit-server/: Cargo.toml  README.md
agentkit-server/src/: main.rs
agentkit-skills/: Cargo.toml  README.md
agentkit-skills/src/: cache.rs  command_skills.rs  config.rs  file_skills.rs  integrator.rs  lib.rs  loader.rs  registry.rs  rhai_skills.rs  testkit.rs  tool_adapter.rs
agentkit-tools/: Cargo.toml  README.md
agentkit-tools/src/: browse.rs  browser.rs  cmd_exec.rs  datetime_tool.rs  echo.rs  file.rs  git.rs  github_trending_tool.rs  http.rs  lib.rs  memory.rs  serpapi_tool.rs  shell.rs  tavily_tool.rs  web.rs  web_search.rs
agentkit/benches/: json_serialize.rs  vector_store_search.rs
agentkit/examples/: 01_basic_chat.rs  01_hello_world.rs  02_basic_chat.rs  02_provider.rs  03_chat_with_tools.rs  03_tools.rs  04_extractor.rs  04_memory.rs  05_conversation.rs  06_agent_conversation.rs  06_cost.rs  06_memory.rs  07_rag.rs  07_router_provider.rs  08_middleware.rs  08_resilient_provider.rs  09_mcp.rs  09_prompt.rs  10_custom_provider.rs  10_research_assistant.rs  11_resilient_provider.rs  12_mcp.rs  13_a2a.rs  13_task_decomposition.rs  14_skills.rs  15_react_agent.rs  16_reflect_agent.rs  17_supervisor_agent.rs  18_research_assistant.rs  19_code_assistant.rs  20_custom_agent_with_middleware.rs  21_unified_conversation.rs  22_error_classification.rs  23_prompt_injection_guard.rs  24_context_compression.rs  25_streaming_agent.rs  README.md  README_A2A.md  TASK_DECOMPOSITION_README.md  a2a_demo.rs  (+29 more)
agentkit/src/: config.rs  conversation.rs  cost.rs  lib.rs  middleware.rs  prompt.rs
agentkit/tests/: config_loading.rs  embedding_cache.rs  http_request_tool.rs  memory_tools.rs  rag_pipeline.rs  resilient_provider.rs  router_provider.rs  skills_basic.rs  skills_ecosystem.rs
examples/a2a-client/: Cargo.toml  README.md
examples/a2a-server/: Cargo.toml  README.md
examples/agentkit-deep-research/: .env.example  Cargo.toml  NVIDIA_API_GUIDE.md  README.md
examples/agentkit-examples/: Cargo.toml
examples/agentkit-examples-complete/: Cargo.toml
examples/agentkit-examples-deep-dive/: Cargo.toml
rucora/: Cargo.toml  README.md
rucora-a2a/: Cargo.toml  README.md
rucora-a2a/src/: lib.rs  protocol.rs
rucora-core/: Cargo.toml  README.md
rucora-core/src/: error.rs  error_classifier_trait.rs  graceful_shutdown.rs  injection_guard_trait.rs  lib.rs  retry.rs
rucora-core/tests/: contract_memory.rs  contract_provider.rs  contract_skill.rs  contract_tool.rs  contract_vector_store.rs  integration_test.rs  property_tests.rs  test_utils.rs
rucora-embed/: Cargo.toml  README.md
rucora-embed/src/: cache.rs  lib.rs  ollama.rs  openai.rs
rucora-macros/: Cargo.toml
rucora-macros/src/: lib.rs
rucora-mcp/: Cargo.toml  README.md
rucora-mcp/src/: lib.rs  protocol.rs  tool.rs  transport.rs
rucora-prompt/: Cargo.toml  README.md
rucora-prompt/prompts/: README.md
rucora-prompt/src/: built_in.rs  lib.rs  loader.rs  template.rs
rucora-providers/: Cargo.toml  README.md
rucora-providers/src/: anthropic.rs  azure_openai.rs  deepseek.rs  gemini.rs  helpers.rs  lib.rs  moonshot.rs  ollama.rs  openai.rs  openrouter.rs  resilient.rs
rucora-retrieval/: Cargo.toml  README.md
rucora-retrieval/src/: chroma.rs  chroma_persistent.rs  in_memory.rs  lib.rs  memory.rs  qdrant.rs
rucora-skills/: Cargo.toml  README.md
rucora-skills/src/: cache.rs  config.rs  file_skills.rs  integrator.rs  lib.rs  loader.rs  tool_adapter.rs
rucora-tools/: Cargo.toml  README.md
rucora-tools/src/: browse.rs  browser.rs  cmd_exec.rs  datetime_tool.rs  echo.rs  git.rs  github_trending_tool.rs  http.rs  lib.rs  memory.rs  serpapi_tool.rs  shell.rs  tavily_tool.rs
rucora/benches/: json_serialize.rs  vector_store_search.rs
rucora/examples/: 01_hello_world.rs  06_memory.rs  (+22 more)
(+452 files in other folders)
