[workspace]
resolver = "3"
members = [
    "agentkit",
    "agentkit-core",
    "agentkit-mcp",
    "agentkit-a2a",
    "agentkit-providers",
    "agentkit-tools",
    "agentkit-embed",
    "agentkit-retrieval",
    "agentkit-skills",
    "examples/a2a-client",
    "examples/a2a-server",
    "examples/agentkit-skills-example",
    "examples/agentkit-deep-research"
]

[workspace.package]
version = "0.1.0"
