[package]
name = "agentkit-a2a"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[dependencies]
agentkit-core = { path = "../agentkit-core" }
async-trait = "0.1"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "macros", "rt", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
