[package]
name = "agentkit-a2a"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[features]
default = ["client", "server"]
client = ["ra2a/client"]
server = ["ra2a/server"]
grpc = ["ra2a/grpc"]
telemetry = ["ra2a/telemetry"]
sql = ["ra2a/sql"]
postgresql = ["ra2a/postgresql"]
mysql = ["ra2a/mysql"]
sqlite = ["ra2a/sqlite"]
full = ["ra2a/full"]

[dependencies]
agentkit-core = { path = "../agentkit-core" }
async-trait = "0.1"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "macros", "rt", "time"] }
ra2a = { version = "0.8.1", default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
