[package]
name = "agentkit-a2a"
version.workspace = true
edition = "2024"
description = "A2A (Agent-to-Agent) protocol integration for AgentKit"
documentation = "https://docs.rs/agentkit-a2a"
readme = "README.md"

[dependencies]
agentkit-core = { path = "../agentkit-core" }
ra2a = { version = "0.9", default-features = false, features = ["client", "server"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
