[package]
name = "agentkit-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agentkit"
path = "src/main.rs"

[dependencies]
agentkit = { path = "../agentkit" }
agentkit-core = { path = "../agentkit-core" }
agentkit-runtime = { path = "../agentkit-runtime" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
