[package]
name = "agentkit-cli"
version.workspace = true
edition = "2021"

[[bin]]
name = "agentkit"
path = "src/main.rs"

[dependencies]
agentkit = { path = "../agentkit", features = ["runtime"] }
agentkit-core = { path = "../agentkit-core" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
