[package]
name = "agentkit-core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
agentkit = { path = "../agentkit" }