[package]
name = "agentkit-core"
version.workspace = true
edition = "2024"

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
futures-util = "0.3"
tokio = { version = "1", features = ["sync", "time", "macros", "rt"] }

[dev-dependencies]
agentkit-retrieval = { path = "../agentkit-retrieval" }