[package]
name = "agentkit-core"
version.workspace = true
edition = "2024"

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
futures-util = "0.3"
tokio = { version = "1", features = ["sync", "time", "macros", "rt", "fs", "process"] }
regex = "1"
tracing = "0.1"

[dev-dependencies]
agentkit-retrieval = { path = "../agentkit-retrieval" }

# 继承 workspace 级别的 lint 配置
[lints]
workspace = true