[package]
name = "agentkit-embed"
version.workspace = true
edition = "2024"
description = "Embedding providers for AgentKit"
documentation = "https://docs.rs/agentkit-embed"
readme = "README.md"

[features]
default = ["openai"]
openai = []
ollama = []
all = ["openai", "ollama"]

[dependencies]
agentkit-core = { path = "../agentkit-core" }
async-trait = "0.1"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "2"

# ?? workspace ??? lint ??
[lints]
workspace = true
