[package]
name = "agentkit-mcp"
version.workspace = true
edition = "2021"

[lib]
doctest = false

[dependencies]
agentkit-core = { path = "../agentkit-core" }
async-trait = "0.1"
http = "1"
rmcp = { version = "1.2.0", features = ["client", "reqwest", "transport-streamable-http-client-reqwest"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "io-util", "macros", "rt"] }
tracing = "0.1"

[dev-dependencies]
rmcp = { version = "1.2.0", features = ["server"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "stream"] }
