[package]
name = "agentkit-mcp"
version.workspace = true
edition = "2024"
description = "MCP (Model Context Protocol) integration for AgentKit"
documentation = "https://docs.rs/agentkit-mcp"
readme = "README.md"

[dependencies]
agentkit-core = { path = "../agentkit-core" }
rmcp = { version = "1.3", features = ["client", "reqwest", "transport-streamable-http-client-reqwest"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "2"

# ?? workspace ??? lint ??
[lints]
workspace = true
