[package]
name = "agentkit-providers"
version.workspace = true
edition = "2024"
description = "LLM Providers for AgentKit"
documentation = "https://docs.rs/agentkit-providers"
readme = "README.md"

[features]
default = ["openai"]
openai = []
anthropic = []
gemini = []
azure-openai = []
ollama = []
openrouter = []
deepseek = []
moonshot = []
resilient = []
all = ["openai", "anthropic", "gemini", "azure-openai", "ollama", "openrouter", "deepseek", "moonshot", "resilient"]

[dependencies]
agentkit-core = { path = "../agentkit-core" }
async-trait = "0.1"
reqwest = { version = "0.13", features = ["json", "stream", "query", "gzip", "brotli", "deflate", "zstd"] }
futures-util = "0.3"
futures-executor = "0.3"
async-stream = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
tracing = "0.1"
thiserror = "2"
url = "2"
backon = "1.5"
