[package]
name = "agentkit-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
agentkit-core = { path = "../agentkit-core" }
async-trait = "0.1"
futures-util = "0.3"
async-stream = "0.3"
serde_json = "1"
tracing = "0.1"
tokio = { version = "1", features = ["time", "fs", "io-util"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "fs", "io-util"] }
criterion = "0.5"

[[bench]]
name = "tool_policy_check"
harness = false
