[package]
name = "agentkit-runtime"
version = "0.1.0"
edition = "2021"

[features]
default = ["builtin-tools", "skills"]
builtin-tools = ["dep:agentkit"]
skills = ["dep:agentkit", "dep:agentkit-skills"]
mcp = ["dep:agentkit-mcp"]
a2a = ["dep:agentkit-a2a"]
full = ["builtin-tools", "skills", "mcp", "a2a"]

[dependencies]
agentkit-core = { path = "../agentkit-core" }
agentkit = { path = "../agentkit", optional = true }
agentkit-skills = { path = "../agentkit-skills", optional = true, default-features = true }
agentkit-mcp = { path = "../agentkit-mcp", optional = true }
agentkit-a2a = { path = "../agentkit-a2a", optional = true }
async-trait = "0.1"
futures-util = "0.3"
async-stream = "0.3"
serde_json = "1"
tracing = "0.1"
tokio = { version = "1", features = ["time", "fs", "io-util", "sync"] }

# MCP 依赖
rmcp = { version = "1.2.0", features = ["client"], optional = true }

# A2A 依赖
ra2a = { version = "0.8.1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "fs", "io-util"] }
criterion = "0.5"

[[bench]]
name = "tool_policy_check"
harness = false
