[package]
name = "agentkit-server"
version.workspace = true
edition = "2021"

[[bin]]
name = "agentkit-server"
path = "src/main.rs"

[dependencies]
agentkit = { path = "../agentkit" }
agentkit-core = { path = "../agentkit-core" }
agentkit-runtime = { path = "../agentkit-runtime" }
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
