[package]
name = "agentkit-skills"
version.workspace = true
edition = "2024"
description = "Skills system for AgentKit"
documentation = "https://docs.rs/agentkit-skills"
readme = "README.md"

[features]
default = []
yaml = ["serde_yaml"]
all = ["yaml"]

[dependencies]
agentkit-core = { path = "../agentkit-core" }
agentkit-tools = { path = "../agentkit-tools" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = { version = "0.9", optional = true }
tokio = { version = "1", features = ["fs"] }
tracing = "0.1"
thiserror = "2"
anyhow = "1"
