[package]
name = "agentkit-tools"
version.workspace = true
edition = "2024"
description = "Built-in tools for AgentKit"
documentation = "https://docs.rs/agentkit-tools"
readme = "README.md"

[features]
default = ["basic", "system", "file", "network", "memory"]
basic = []
system = ["tokio/process"]
file = ["tokio/fs"]
network = ["reqwest"]
browser = ["network"]
memory = []
datetime = []
github = ["network"]
web_search = ["network"]
all = ["basic", "system", "file", "network", "browser", "memory", "datetime", "github", "web_search"]

[dependencies]
agentkit-core = { path = "../agentkit-core" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "sync", "process", "fs"] }
tracing = "0.1"
thiserror = "2"
reqwest = { version = "0.13", features = ["json", "gzip", "brotli", "deflate", "zstd"] }
regex = "1"
chrono = "0.4"
url = "2"
scraper = "0.22"
html2text = "0.12"
dom_smoothie = "0.16"
schemars = "0.8"
backon = "1.5"
