[package]
name = "agentkit"
version.workspace = true
edition = "2024"

[lib]
doctest = false

[features]
default = []
runtime = []  # 空 feature，用于兼容
# MCP 协议支持
mcp = ["dep:rmcp"]
# A2A 协议支持
a2a = ["dep:ra2a"]
# Skills 技能系统
skills = ["dep:serde_yaml"]
# MCP 完整功能
mcp-full = ["mcp"]
# A2A 完整功能
a2a-full = ["a2a", "ra2a/full"]

[dependencies]
agentkit-core = { path = "../agentkit-core" }
# 直接依赖外部库，不再通过独立 crate
rmcp = { version = "1.2.0", features = ["client", "reqwest", "transport-streamable-http-client-reqwest"], 
optional = true }
ra2a = { version = "0.8.1", default-features = false, features = ["client", "server"], optional = true }  

# 核心依赖
async-trait = "0.1"
reqwest = { version = "0.13", features = ["json", "stream","query", "gzip", "brotli", "deflate", "zstd"] }
futures-util = "0.3"
async-stream = "0.3"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = { version = "0.9", optional = true }
toml = "0.8"
dom_smoothie = "0.16"
html2text = "0.12"
tokio = { version = "1", features = ["process", "fs", "time", "sync"] }
tracing = "0.1"
url = "2"
regex = "1"
thiserror = "2"
chrono = "0.4"
scraper = "0.22"
backon = "1.5"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
criterion = "0.5"
anyhow = "1"

[[bench]]
name = "json_serialize"
harness = false

[[bench]]
name = "vector_store_search"
harness = false

# 示例配置
[[example]]
name = "chat_basic"
path = "examples/chat_basic.rs"
required-features = ["runtime"]

[[example]]
name = "chat_with_tools"
path = "examples/chat_with_tools.rs"


[[example]]
name = "provider"
path = "examples/provider.rs"

[[example]]
name = "tools"
path = "examples/tools.rs"

[[example]]
name = "memory"
path = "examples/memory.rs"
required-features = ["runtime"]

[[example]]
name = "conversation"
path = "examples/conversation.rs"
required-features = ["runtime"]

[[example]]
name = "agent_conversation"
path = "examples/agent_conversation.rs"
required-features = ["runtime"]

[[example]]
name = "resilient_provider"
path = "examples/resilient_provider.rs"

[[example]]
name = "middleware"
path = "examples/middleware.rs"
required-features = ["runtime"]

[[example]]
name = "mcp"
path = "examples/mcp.rs"
required-features = ["mcp"]

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"

