[package]
name = "agentkit"
version.workspace = true
edition = "2024"

[lib]
doctest = false

[features]
default = []
runtime = []  # 空 feature，用于兼容
# MCP 协议支持
mcp = ["dep:rmcp"]
# A2A 协议支持
a2a = ["dep:ra2a"]
# Skills 技能系统
skills = ["dep:serde_yaml"]

[dependencies]
agentkit-core = { path = "../agentkit-core" }
# 直接依赖外部库，不再通过独立 crate
rmcp = { version = "1.3", features = ["client", "reqwest", "transport-streamable-http-client-reqwest"], optional = true }
ra2a = { version = "0.9", default-features = false, features = ["client", "server"], optional = true }
async-trait = "0.1"
reqwest = { version = "0.13", features = ["json", "stream","query", "gzip", "brotli", "deflate", "zstd"] }
futures-util = "0.3"
futures-executor = "0.3"
async-stream = "0.3"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = { version = "0.9", optional = true }
toml = "0.8"
dom_smoothie = "0.16"
html2text = "0.12"
tokio = { version = "1", features = ["process", "fs", "time", "sync"] }
tracing = "0.1"
url = "2"
regex = "1"
thiserror = "2"
chrono = "0.4"
scraper = "0.22"
backon = "1.5"
schemars = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
criterion = "0.5"
anyhow = "1"
dotenv = "0.15.0"

[[bench]]
name = "json_serialize"
harness = false

[[bench]]
name = "vector_store_search"
harness = false

# ===== 示例配置 =====

# 入门系列（01-05）
[[example]]
name = "01_hello_world"
path = "examples/01_hello_world.rs"

[[example]]
name = "02_basic_chat"
path = "examples/02_basic_chat.rs"

[[example]]
name = "03_chat_with_tools"
path = "examples/03_chat_with_tools.rs"

[[example]]
name = "04_extractor"
path = "examples/04_extractor.rs"

[[example]]
name = "05_conversation"
path = "examples/05_conversation.rs"

# 核心模块（06-10）
[[example]]
name = "06_memory"
path = "examples/06_memory.rs"

[[example]]
name = "07_rag"
path = "examples/07_rag.rs"

[[example]]
name = "08_middleware"
path = "examples/08_middleware.rs"

[[example]]
name = "09_prompt"
path = "examples/09_prompt.rs"

[[example]]
name = "10_custom_provider"
path = "examples/10_custom_provider.rs"

# 高级特性（11-14）
[[example]]
name = "11_resilient_provider"
path = "examples/11_resilient_provider.rs"

[[example]]
name = "12_mcp"
path = "examples/12_mcp.rs"
required-features = ["mcp"]

[[example]]
name = "13_task_decomposition"
path = "examples/13_task_decomposition.rs"

# Agent 类型（15-17）
[[example]]
name = "15_react_agent"
path = "examples/15_react_agent.rs"

[[example]]
name = "16_reflect_agent"
path = "examples/16_reflect_agent.rs"

[[example]]
name = "17_supervisor_agent"
path = "examples/17_supervisor_agent.rs"

# 综合应用（18-21）
[[example]]
name = "18_research_assistant"
path = "examples/18_research_assistant.rs"

[[example]]
name = "19_code_assistant"
path = "examples/19_code_assistant.rs"

[[example]]
name = "21_unified_conversation"
path = "examples/21_unified_conversation.rs"

