[package]
name = "agentkit"
version.workspace = true
edition = "2024"

[lib]
doctest = false

[features]
default = ["providers", "tools", "embed", "retrieval"]
# 协议支持
mcp = ["dep:agentkit-mcp"]
a2a = ["dep:agentkit-a2a"]
# Skills 技能系统
skills = ["dep:agentkit-skills"]
# 子模块（可选）
providers = ["dep:agentkit-providers"]
tools = ["dep:agentkit-tools"]
embed = ["dep:agentkit-embed"]
retrieval = ["dep:agentkit-retrieval"]
# 全量启用
full = ["providers", "tools", "embed", "retrieval", "mcp", "a2a", "skills"]

[dependencies]
# 核心层
agentkit-core = { path = "../agentkit-core" }

# 子模块（可选，通过 feature 启用）
agentkit-mcp = { path = "../agentkit-mcp", optional = true }
agentkit-a2a = { path = "../agentkit-a2a", optional = true }
agentkit-providers = { path = "../agentkit-providers", optional = true }
agentkit-tools = { path = "../agentkit-tools", optional = true }
agentkit-embed = { path = "../agentkit-embed", optional = true }
agentkit-retrieval = { path = "../agentkit-retrieval", optional = true }
agentkit-skills = { path = "../agentkit-skills", optional = true }

# agentkit 核心依赖（仅主库自身功能需要）
async-trait = "0.1"
async-stream = "0.3"
futures-util = "0.3"
futures-executor = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "sync"] }
tracing = "0.1"
thiserror = "2"
anyhow = "1"
schemars = "0.8"
regex = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
criterion = "0.5"
anyhow = "1"
dotenv = "0.15.0"
agentkit-retrieval = { path = "../agentkit-retrieval" }
agentkit-embed = { path = "../agentkit-embed" }
agentkit-tools = { path = "../agentkit-tools" }
agentkit-providers = { path = "../agentkit-providers" }
agentkit-mcp = { path = "../agentkit-mcp" }
agentkit-skills = { path = "../agentkit-skills" }
reqwest = { version = "0.13", features = ["json"] }
chrono = "0.4"

[[bench]]
name = "json_serialize"
harness = false

[[bench]]
name = "vector_store_search"
harness = false

# ===== 示例配置 =====

# 入门系列（01-05）
[[example]]
name = "01_hello_world"
path = "examples/01_hello_world.rs"

[[example]]
name = "02_basic_chat"
path = "examples/02_basic_chat.rs"

[[example]]
name = "03_chat_with_tools"
path = "examples/03_chat_with_tools.rs"

[[example]]
name = "04_extractor"
path = "examples/04_extractor.rs"

[[example]]
name = "05_conversation"
path = "examples/05_conversation.rs"

# 核心模块（06-10）
[[example]]
name = "06_memory"
path = "examples/06_memory.rs"

[[example]]
name = "07_rag"
path = "examples/07_rag.rs"

[[example]]
name = "08_middleware"
path = "examples/08_middleware.rs"

[[example]]
name = "09_prompt"
path = "examples/09_prompt.rs"

[[example]]
name = "10_custom_provider"
path = "examples/10_custom_provider.rs"

# 高级特性（11-14）
[[example]]
name = "11_resilient_provider"
path = "examples/11_resilient_provider.rs"

[[example]]
name = "12_mcp"
path = "examples/12_mcp.rs"
required-features = ["mcp"]

[[example]]
name = "13_task_decomposition"
path = "examples/13_task_decomposition.rs"

# Agent 类型（15-17）
[[example]]
name = "15_react_agent"
path = "examples/15_react_agent.rs"

[[example]]
name = "16_reflect_agent"
path = "examples/16_reflect_agent.rs"

[[example]]
name = "17_supervisor_agent"
path = "examples/17_supervisor_agent.rs"

# 综合应用（18-21）
[[example]]
name = "18_research_assistant"
path = "examples/18_research_assistant.rs"

[[example]]
name = "19_code_assistant"
path = "examples/19_code_assistant.rs"

[[example]]
name = "21_unified_conversation"
path = "examples/21_unified_conversation.rs"

# 继承 workspace 级别的 lint 配置
[lints]
workspace = true

