[package]
name = "rucora-a2a"
version.workspace = true
edition = "2024"
description = "A2A (Agent-to-Agent) protocol integration for rucora"
documentation = "https://docs.rs/rucora-a2a"
readme = "README.md"
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rucora-core = { path = "../rucora-core", version = "0.1" }
ra2a = { version = "0.9", default-features = false, features = ["client", "server"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }

# ?? workspace ??? lint ??
[lints]
workspace = true
