[package]
name = "rucora-core"
version.workspace = true
edition = "2024"
description = "Core abstractions and types for the rucora LLM agent framework"
documentation = "https://docs.rs/rucora-core"
readme = "README.md"
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
futures-util = "0.3"
tokio = { version = "1", features = ["sync", "time", "macros", "rt", "fs", "process"] }
regex = "1"
tracing = "0.1"

# 注意：contract_vector_store.rs 测试需要在 workspace 级别运行
# 而非单独发布 rucora-core 时运行

# 继承 workspace 级别的 lint 配置
[lints]
workspace = true