[package]
name = "rucora-embed"
version.workspace = true
edition = "2024"
description = "Embedding providers for rucora"
documentation = "https://docs.rs/rucora-embed"
readme = "README.md"

[features]
default = ["openai"]
openai = []
ollama = []
all = ["openai", "ollama"]

[dependencies]
rucora-core = { path = "../rucora-core" }
async-trait = "0.1"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "2"

# ?? workspace ??? lint ??
[lints]
workspace = true
