[package]
name = "rucora-embed"
version.workspace = true
edition = "2024"
description = "Embedding providers for rucora"
documentation = "https://docs.rs/rucora-embed"
readme = "README.md"
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["openai"]
openai = []
ollama = []
all = ["openai", "ollama"]

[dependencies]
rucora-core = { path = "../rucora-core", version = "0.1.2" }
async-trait = "0.1"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "2"

# ?? workspace ??? lint ??
[lints]
workspace = true
