[package]
name = "rucora-macros"
version.workspace = true
edition = "2024"
description = "Procedural macros for the rucora LLM agent framework"
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
proc-macro-crate = "3"

[lints]
workspace = true
