[package]
name = "rucora-mcp"
version.workspace = true
edition = "2024"
description = "MCP (Model Context Protocol) integration for rucora"
documentation = "https://docs.rs/rucora-mcp"
readme = "README.md"

[dependencies]
rucora-core = { path = "../rucora-core" }
rmcp = { version = "1.3", features = ["client", "reqwest", "transport-streamable-http-client-reqwest"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "2"

# ?? workspace ??? lint ??
[lints]
workspace = true
