[package]
name = "rucora-providers"
version.workspace = true
edition = "2024"
description = "LLM provider implementations for rucora (OpenAI, Anthropic, Gemini, Ollama, etc.)"
documentation = "https://docs.rs/rucora-providers"
readme = "README.md"
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["openai"]
openai = []
anthropic = []
gemini = []
azure-openai = []
ollama = []
openrouter = []
deepseek = []
moonshot = []
resilient = []
all = ["openai", "anthropic", "gemini", "azure-openai", "ollama", "openrouter", "deepseek", "moonshot", "resilient"]

[dependencies]
rucora-core = { path = "../rucora-core", version = "0.1.2" }
async-trait = "0.1"
reqwest = { version = "0.13", features = ["json", "stream", "query", "gzip", "brotli", "deflate", "zstd"] }
futures-util = "0.3"
futures-executor = "0.3"
async-stream = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
tracing = "0.1"
thiserror = "2"
url = "2"
backon = "1.5"

# ?? workspace ??? lint ??
[lints]
workspace = true
