[package]
name = "rucora-skills"
version.workspace = true
edition = "2024"
description = "Skills system for rucora (YAML command templates)"
documentation = "https://docs.rs/rucora-skills"
readme = "README.md"
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
all = []

[dependencies]
rucora-core = { path = "../rucora-core", version = "0.1" }
rucora-tools = { path = "../rucora-tools", version = "0.1" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
tokio = { version = "1", features = ["fs"] }
tracing = "0.1"
thiserror = "2"
anyhow = "1"

[lints]
workspace = true
