[package]
name = "a2a-client"
version = "0.1.0"
edition = "2024"
description = "rucora A2A 客户端示例 - 使用 rucora 调用 A2A server"
publish = false

[dependencies]
ra2a = { version = "0.9", default-features = false, features = ["client"] }
rucora = { path = "../../rucora", features = ["full"] }
rucora-core = { path = "../../rucora-core" }
rucora-providers = { path = "../../rucora-providers" }
rucora-tools = { path = "../../rucora-tools" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"